# LinkCanary

./: .gitignore  Dockerfile  LICENSE  README.md  action.yml  link_report.csv  linkcanary-landing-page.html  pyproject.toml  requirements.txt
.github/: entrypoint.sh
.github/workflows/: ci.yml  test.yml
docs/: SAAS_MIGRATION_SPEC.md  social-media-content-plan.md
link_checker/: __init__.py  checker.py  cli.py  crawler.py  exporters.py  fp_logger.py  html_reporter.py  patterns.py  report_cli.py  reporter.py  robots.py  sitemap.py  utils.py  webhook_dispatcher.py
linkcanary-ui/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  skill.md  test_checker.py  test_patterns.py  test_robots.py  test_sitemap.py
linkcanary-ui/.github/: Dockerfile  action.yml  entrypoint.sh
linkcanary-ui/.github/workflows/: linkcanary.yml  test-action.yml
linkcanary-ui/backend/: __init__.py  config.py  main.py
linkcanary-ui/backend/api/: crawls.py  reports.py  stats.py  websocket.py
linkcanary-ui/backend/models/: __init__.py  crawl.py  database.py  schemas.py
linkcanary-ui/backend/static/: index.html
linkcanary-ui/backend/static/assets/: index-Dgk8dmmZ.css  index-HZS6dd1L.js
linkcanary-ui/backend/tasks/: celery_app.py  crawl_task.py
linkcanary-ui/frontend/: index.html  package-lock.json  vite.config.js
linkcanary-ui/frontend/public/fonts/: README.md
linkcanary-ui/frontend/src/: App.jsx  index.css
linkcanary-ui/frontend/src/components/: Badge.jsx  Button.jsx  Card.jsx  Input.jsx  Layout.jsx
linkcanary-ui/frontend/src/context/: ThemeContext.jsx
linkcanary-ui/frontend/src/pages/: BacklinkChecker.jsx  CiDocs.jsx  CrawlProgress.jsx  Dashboard.jsx  Integrations.jsx  NewCrawl.jsx  ReportViewer.jsx  Reports.jsx  Settings.jsx  ShareView.jsx  UrlResolution.jsx
linkcanary-ui/frontend/src/services/: api.js
linkcanary-ui/link_checker/: crawler.py
linkcanary-ui/linkcanary_ui/: __init__.py  config.py  main.py  mcp.py  report_generator.py  storage.py
linkcanary-ui/linkcanary_ui/api/: backlinks.py  crawls.py  reports.py  settings.py  url_resolution.py  webhooks.py
linkcanary-ui/linkcanary_ui/models/: __init__.py  crawl.py  schemas.py  webhook.py
linkcanary-ui/linkcanary_ui/services/: __init__.py  webhooks.py
linkcanary-ui/linkcanary_ui/static/: index.html
linkcanary-ui/linkcanary_ui/static/assets/: index-BUtW5Zal.js  index-BluRJhe_.css  index-CEJfy_XQ.css  index-CYRcQcQu.js  index-Cj8Cm4T3.css  index-ZIYrC2XI.js
linkcanary-ui/linkcanary_ui/tasks/: celery_app.py  crawl_task.py
linkcanary-ui/linkcanary_ui/templates/: white_label_report.html
linkcanary-ui/migrations/: env.py
linkcanary-ui/migrations/versions/: 0001_initial.py
linkcanary-ui/skills/: asana.md  jira.md
site/: .gitignore  astro.config.mjs  package-lock.json  package.json
site/src/pages/: index.astro
site/src/styles/: landing.css
tests/: test_backlinks.py  test_checker.py  test_crawler.py  test_integration.py  test_patterns.py  test_robots.py  test_sitemap.py  test_utils.py
