[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkcanary"
version = "0.3"
description = "A command-line tool that crawls websites via sitemap, checks all links, and identifies broken links and redirect chains"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Site Management :: Link Checking",
]
keywords = ["seo", "links", "broken-links", "redirect", "sitemap", "crawler"]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "pandas>=1.5.0",
    "tqdm>=4.64.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
export = [
    "openpyxl>=3.0.0",
    "xlsxwriter>=3.0.0",
    "reportlab>=3.6.0",
]
pdf = ["weasyprint>=60.0"]
sheets = [
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
]
all = [
    "openpyxl>=3.0.0",
    "xlsxwriter>=3.0.0",
    "reportlab>=3.6.0",
    "weasyprint>=60.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.scripts]
linkcheck = "link_checker.cli:main"
linkcheck-report = "link_checker.report_cli:main"

[project.urls]
Homepage = "https://github.com/chesterbeard/linkcanary"
Repository = "https://github.com/chesterbeard/linkcanary"
Issues = "https://github.com/chesterbeard/linkcanary/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["link_checker*"]
